erDiagram
    ADMIN {
        ObjectId id PK
        string name
        string email
        string password
        string role
    }

    INQUIRY {
        ObjectId id PK
        string name
        string email
        string phone
        string companyName
        string jobTitle
        string jobDetails
        string status
        datetime createdAt
    }

    CONTENT_ITEM {
        ObjectId id PK
        string type
        string title
        string description
        string imageUrl
        boolean published
    }

    IMAGE_ASSET {
        ObjectId id PK
        string filename
        string mimeType
        int size
    }

    TESTIMONIAL {
        ObjectId id PK
        string authorName
        string authorCompany
        string quote
        int rating
        boolean published
    }

    CHAT_SESSION {
        ObjectId id PK
        string customerName
        string customerEmail
        string status
        int unreadCount
    }

    CHAT_MESSAGE {
        ObjectId id PK
        string sender
        string message
        datetime sentAt
    }

    ADMIN ||--o{ INQUIRY : handles
    ADMIN ||--o{ CONTENT_ITEM : manages
    ADMIN ||--o{ TESTIMONIAL : moderates
    ADMIN ||--o{ CHAT_SESSION : replies

    CONTENT_ITEM }o--o| IMAGE_ASSET : uses
    TESTIMONIAL }o--o| IMAGE_ASSET : uses
    CHAT_SESSION ||--o{ CHAT_MESSAGE : contains
